# pyqueueing

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: draft-paper.yml
examples/: 01_basic_models.ipynb  02_call_center_staffing.ipynb  03_model_comparison.ipynb
paper/: paper.bib  paper.md
src/pyqueueing/: __init__.py  planner.py  sensitivity.py
src/pyqueueing/models/: __init__.py  base.py  erlang_a.py  erlang_b.py  erlang_c.py  mg1.py  mm1.py  mm1k.py  mmc.py  mmck.py  mminf.py  qbd.py
src/pyqueueing/plotting/: __init__.py  charts.py
src/pyqueueing/solvers/: __init__.py  matrix_geometric.py
src/pyqueueing/utils/: __init__.py
tests/: test_cross_model.py  test_edge_cases.py  test_erlang_a.py  test_erlang_b.py  test_erlang_c.py  test_mg1.py  test_mm1.py  test_mm1k.py  test_mmc.py  test_mmck.py  test_mminf.py  test_planner.py  test_qbd.py  test_sensitivity.py  test_wait_time.py
